--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,8 +8,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '18'
-      - run: npm ci
-      - run: npm run build
+      - run: cd vendor && npm ci
+      - run: cd vendor && npm run build
       - uses: actions/upload-artifact@v4
         with:
           name: windows-build
@@ -21,8 +21,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '18'
-      - run: npm ci
-      - run: npm run build
+      - run: cd vendor && npm ci
+      - run: cd vendor && npm run build
       - uses: actions/upload-artifact@v4
         with:
           name: mac-build
